--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,6 @@
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
-    --viewport-height: 100vh;
   }
   .dark {
     --background: 222 33% 11%;
@@ -71,8 +70,7 @@
     @apply bg-background text-foreground;
     margin: 0;
     min-width: 320px;
-    min-height: var(--viewport-height);
-    height: var(--viewport-height);
+    min-height: 100vh;
   }
   textarea::placeholder {
     @apply text-muted-foreground/40;
